<resources>
    <string name="app_name">FrameWiz</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in_underlined"><u>Sign In</u></string>
    <string name="sign_up_underlined"><u>here</u></string>
    <string name="have_an_account">Have an account?</string>
    <string name="create_your_account">Create your account</string>
    <string name="frame">Frame</string>
    <string name="upload">upload</string>
    <string name="take_photo">Take Photo</string>
    <string name="shape">Shape</string>
</resources>